GDB pretty printer for boost::optional can fail for direct storage

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      Some boost optional fields will fail to pretty print with this error

      _value = Traceback (most recent call last):
        File "buildscripts/gdb/mongo_printers.py", line 152, in to_string
          return get_boost_optional(self.val)
        File "buildscripts/gdb/mongo.py", line 344, in get_boost_optional
          storage = optional["m_storage"]["dummy_"]["data"]
      gdb.error: Attempt to extract a component of a value that is not a struct/class/union.

      We should copy over the fix from https://github.com/visemet/gdb-mongodb-server/blob/v0.15.2/gdbmongo/boost_printers.py#L75-L86 into the server codebase.

            Assignee:
            Max Hirschhorn
            Reporter:
            Ben Shteinfeld
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: