SERVER-100689 Fix get_boost_optional() for direct storage types. (#33303)

GitOrigin-RevId: b85553c7ad1ed635beaa3bcc6ea38c3b8aeae364